--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    height: 100%;
+
     &-nav {
       display: flex;
       align-items: center;
@@ -35,6 +37,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+
         &-injector {
           display: flex;
           gap: 24px;
